src/test/deca/context/valid/literal-int.deca
// Description:
//    Literal int
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    1;
}