src/test/deca/context/invalid/3.33-test-and.deca
// Description:
//    Test 3.3 fail avec and
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    true && 1;
}